--- a/src/InstantSoin/ProductBundle/Resources/views/Products/Products_by_cat.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Products/Products_by_cat.html.twig
@@ -1,31 +1,47 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-
-	<h3><a href="{{ path( 'product_overall' ) }}">{{products[0].categorieProd.intitule }} : <span>Retour</span></a></h3>
-	<br><br>
-	<section>
-	{% for products in products %}
-			<form class="CatListing" action="#">
-				<div>
-					<img src="{{ asset(products.urlimage) }}" class="catImg" alt="Image impossible à charger">
-					<br><br>
-					{% if products.nouveaute > 0 %}
-						<h5 class="CatListingSpan">Nouveauté !</h5>
-					{% else %}
-						<h5 class="CatListingSpan"> </h5>
-					{% endif %}
-					<a href="#" name="{{products.id }}">{{products.designation }}</a>
-					<br><br>
-				</div>
-				<div>
-						<p>Fabriquant : {{products.fournisseurs.nom }}</p>
-						<br>
-						<p>Stock actuel : {{products.stock}}</p>
-						<p>Prix : {{products.prix}} €</p>
-						<button>-</button><img class="panierlight" src="{{asset('bundles/InstantSoin/Images/panier_vide_light.png')}}" alt="Impossible à charger"><button>+</button>
-				</div>
-			</form>
-    {% endfor %}
-    </section>
+	{% if products is empty %}
+		<h3><a href="{{ path( 'product_overall' ) }}">{{currentCatProd.intitule}} :<span>Retour</span></a></h3>
+		<br>
+		<section>
+		    <br>
+			{% for flashMessage in app.session.flashbag.get('user_add_warning') %}
+			        <div class="add_warning">
+			        <p>
+			        {{ flashMessage }}
+			        </p>
+			        </div>
+			{% endfor %}
+			<br>
+	    </section>
+	{% else %}
+		<h3><a href="{{ path( 'product_overall' ) }}">{{currentCatProd.intitule}} : <span>Retour</span></a></h3>
+		<br><br>
+		<section>
+			{% for products in products %}
+					<form class="CatListing" action="#">
+						<div>
+							<img src="{{ asset(products.urlimage) }}" class="catImg" alt="Image impossible à charger">
+							<br><br>
+							{% if products.nouveaute > 0 %}
+								<h5 class="CatListingSpan">Nouveauté !</h5>
+							{% else %}
+								<h5 class="CatListingSpan"> </h5>
+							{% endif %}
+							<a href="#" name="{{products.id }}">{{products.designation }}</a>
+							<br><br>
+						</div>
+						<div>
+								<p>Fabriquant : {{products.fournisseurs.nom }}</p>
+								<br>
+								<p>Stock actuel : {{products.stock}}</p>
+								<p>Prix : {{products.prix}} €</p>
+								<button>-</button><img class="panierlight" src="{{asset('bundles/InstantSoin/Images/panier_vide_light.png')}}" alt="Impossible à charger"><a href=""><button>+</button></a>
+						</div>
+					</form>
+		    {% endfor %}
+		</section>
+	{% endif %}
+	    
 {% endblock %}
