--- a/src/InstantSoin/ProductBundle/Resources/views/Services/Services_by_cat.html.twig
+++ b/src/InstantSoin/ProductBundle/Resources/views/Services/Services_by_cat.html.twig
@@ -1,28 +1,43 @@
 {% extends 'ProductBundle::layout.html.twig' %}
 
 {% block body %}
-
-	<h3><a href="{{ path( 'services_overall' ) }}">{{services[0].categorieServ.intitule }} : <span>Retour</span></a></h3>
-	<br><br>
-	<section>
-	{% for services in services %}
-			<form class="CatListing" action="#">
-				<div>
-					<img src="{{ asset(services.urlimage) }}" class="catImg" alt="Image impossible à charger">
-					<br><br>
-					{% if services.nouveaute > 0 %}
-						<h5 class="CatListingSpan">Nouveauté !</h5>
-					{% else %}
-						<h5 class="CatListingSpan"> </h5>
-					{% endif %}
-					<a href="#" name="{{services.id }}">{{services.libelle }}</a>
-					<br><br>
-				</div>
-				<div>
-						<p>Prix : {{services.prix}} €</p>
-						<button type="button">Détails</button>
-				</div>
-			</form>
-    {% endfor %}
-    </section>
+	{% if services is empty %}
+		<h3><a href="{{ path( 'services_overall' ) }}">{{currentCatServ.intitule}} :<span>Retour</span></a></h3>
+		<br>
+		<section>
+		    <br>
+			{% for flashMessage in app.session.flashbag.get('user_add_warning') %}
+			        <div class="add_warning">
+			        <p>
+			        {{ flashMessage }}
+			        </p>
+			        </div>
+			{% endfor %}
+			<br>
+	    </section>
+	{% else %}
+		<h3><a href="{{ path( 'services_overall' ) }}">{{currentCatServ.intitule}} :<span>Retour</span></a></h3>
+		<br><br>
+		<section>
+		{% for services in services %}
+				<form class="CatListing" action="#">
+					<div>
+						<img src="{{ asset(services.urlimage) }}" class="catImg" alt="Image impossible à charger">
+						<br><br>
+						{% if services.nouveaute > 0 %}
+							<h5 class="CatListingSpan">Nouveauté !</h5>
+						{% else %}
+							<h5 class="CatListingSpan"> </h5>
+						{% endif %}
+						<a href="#" name="{{services.id }}">{{services.libelle }}</a>
+						<br><br>
+					</div>
+					<div>
+							<p>Prix : {{services.prix}} €</p>
+							<button type="button">Détails</button>
+					</div>
+				</form>
+	    {% endfor %}
+	    </section>
+    {% endif %}
 {% endblock %}
